<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.arefdev.base.ui.dialogs.okCancel.OkCancelDialogViewModel" />
    </data>

    <!--  Root has to be RelativeLayout  -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.arefdev.base.ui.custom.RoundedCornerLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            app:backgroundColor="@color/bg"
            app:radius="10dp"
            app:strokeColor="@color/light_gray"
            app:strokeWidth="1dp">

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <com.arefdev.base.ui.custom.CustomTextView
                    style="@style/headlineBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{viewModel.titleText}"
                    android:textColor="@{viewModel.titleTextColor}"
                    android:visibility="@{viewModel.titleText != null}"
                    tools:text="@string/title"
                    tools:textColor="@color/colorPrimaryDark" />

                <com.arefdev.base.ui.custom.CustomTextView
                    style="@style/textRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{viewModel.bodyText}"
                    android:visibility="@{viewModel.bodyText != null}"
                    tools:text="@string/lorem_ipsum_sentence" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/light_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.arefdev.base.ui.custom.RoundedButton
                        style="@style/DialogPrimaryButton"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:minHeight="50dp"
                        android:onClick="@{viewModel.btnPositiveClickListener}"
                        android:text="@{viewModel.btnPositiveText != null ? viewModel.btnPositiveText : @string/cancel}"
                        android:textColor="@{viewModel.btnPositiveTextColor != null ? viewModel.btnPositiveTextColor : @color/colorPrimary}"
                        app:backgroundColor="@{viewModel.btnPositiveBackgroundColor != null ? viewModel.btnPositiveBackgroundColor : @color/transparent}"
                        app:radiusBottomLeft="0dp"
                        app:radiusBottomRight="10dp"
                        app:radiusTopLeft="0dp"
                        app:radiusTopRight="0dp"
                        tools:text="@string/ok" />

                    <com.arefdev.base.ui.custom.RoundedButton
                        style="@style/DialogSecondaryButton"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:minHeight="50dp"
                        android:onClick="@{viewModel.btnNegativeClickListener}"
                        android:text="@{viewModel.btnNegativeText != null ? viewModel.btnNegativeText : @string/ok}"
                        android:textColor="@{viewModel.btnNegativeTextColor != null ? viewModel.btnNegativeTextColor : @color/bg}"
                        app:backgroundColor="@{viewModel.btnNegativeBackgroundColor != null ? viewModel.btnNegativeBackgroundColor : @color/colorPrimary}"
                        app:radiusBottomLeft="10dp"
                        app:radiusBottomRight="0dp"
                        app:radiusTopLeft="0dp"
                        app:radiusTopRight="0dp"
                        tools:text="@string/cancel" />

                </LinearLayout>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="@{viewModel.isLoading()}"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="@id/content"
                app:layout_constraintTop_toTopOf="@id/content"
                tools:visibility="gone">

                <include
                    layout="@layout/loading_circular"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </androidx.cardview.widget.CardView>

        </com.arefdev.base.ui.custom.RoundedCornerLayout>

    </RelativeLayout>

</layout>
